--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1787,7 +1787,7 @@ div.carousel-mobile > img {
   transition: transform 0.75s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-/* Me Page */
+/** Me Page **/
 
 .transition-enter.me-wrapper {
   z-index: -1;
