--- a/public/css/style.css
+++ b/public/css/style.css
@@ -546,6 +546,7 @@ span.backdrop {
 .details-content > p {
   color: #fff;
   padding-bottom: 6rem;
+  line-height: 1.8;
 }
 
 .details-content > img {
