--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,27 @@
 /* Basic Rules */
 
 @font-face {
-  font-family: "Eina03";
+  font-family: 'Eina03';
   font-weight: 400;
-  src: url("./fonts/Eina03-Regular.ttf") format("truetype");
+  src: url('./fonts/Eina03-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Eina03";
+  font-family: 'Eina03';
   font-weight: 600;
-  src: url("./fonts/Eina03-SemiBold.ttf") format("truetype");
+  src: url('./fonts/Eina03-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Eina03";
-  src: url("./fonts/Eina03-Bold.ttf") format("truetype");
+  font-family: 'Eina03';
+  src: url('./fonts/Eina03-Bold.ttf') format('truetype');
   font-weight: 700;
 }
 
 @font-face {
-  font-family: "Moderat";
-  src: url("./fonts/Moderat-Regular.woff") format("woff"),
-    url("./fonts/Moderat-Regular.eot") format("opentype");
+  font-family: 'Moderat';
+  src: url('./fonts/Moderat-Regular.woff') format('woff'),
+    url('./fonts/Moderat-Regular.eot') format('opentype');
   font-weight: 400;
 }
 
@@ -43,16 +43,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* cursor: none; */
   -webkit-overflow-scrolling: touch;
-  font-family: "Moderat", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Moderat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   overflow: hidden;
   box-sizing: border-box;
 }
 
 h1 {
-  font-family: "Eina03", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Eina03', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 700;
   margin: 0;
 }
@@ -72,7 +72,7 @@ button {
   /* cursor: pointer; */
   outline: none;
   cursor: none;
-  font-family: "Moderat";
+  font-family: 'Moderat';
   font-weight: 400;
   font-size: 1rem;
 }
@@ -255,8 +255,8 @@ span.backdrop {
 }
 
 .logo p {
-  font-family: "Eina03", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Eina03', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 700;
   font-size: 1.2rem;
   margin: 0;
@@ -599,7 +599,7 @@ span.backdrop {
 .website-link:before {
   position: absolute;
   top: 100%;
-  content: "";
+  content: '';
   background-color: #fff;
   will-change: transform;
   width: calc(100% - 2rem);
@@ -692,7 +692,7 @@ span.backdrop {
 }
 
 .prev-next-wrapper a {
-  font-family: "Eina03", Arial, sans-serif;
+  font-family: 'Eina03', Arial, sans-serif;
   display: block;
   transform: translateY(0);
   font-weight: 700;
@@ -722,7 +722,7 @@ span.backdrop {
 .about-wrapper {
   background: #131313;
   color: #fff;
-  font-family: "Moderat", Arial, sans-serif;
+  font-family: 'Moderat', Arial, sans-serif;
   font-weight: 400;
   font-size: 1.2rem;
 }
@@ -744,7 +744,7 @@ span.backdrop {
 
 .about-title,
 .contact-title {
-  font-family: "Eina03", Arial, sans-serif;
+  font-family: 'Eina03', Arial, sans-serif;
   font-weight: 600;
   align-self: flex-end;
   margin-bottom: 2rem;
@@ -780,6 +780,10 @@ span.backdrop {
   -ms-grid-column: 3/4;
   -ms-grid-row: 2/3;
   width: 85%;
+}
+
+.about-text.part-2 a {
+  text-decoration: underline;
 }
 
 .content-mobile .about-text.part-1 {
@@ -926,7 +930,7 @@ span.backdrop {
   align-self: center;
 }
 .card:before {
-  content: "";
+  content: '';
   display: block;
   padding-top: 64.29%;
 }
@@ -963,8 +967,8 @@ span.backdrop {
 .project-info span {
   display: block;
   color: #9b9b9b;
-  font-family: "Eina-03", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Eina-03', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 0.6rem;
   font-weight: 400;
   letter-spacing: 12px;
@@ -1032,7 +1036,7 @@ span.card-type {
 }
 
 span.card-index-wrapper {
-  font-family: "Moderat";
+  font-family: 'Moderat';
   font-weight: 400;
 }
 
@@ -1043,7 +1047,7 @@ span.card-index-wrapper {
   margin-right: 30px; */
   position: absolute;
   right: 0;
-  font-family: "Eina03";
+  font-family: 'Eina03';
   font-weight: 700;
   font-size: 17vw;
   color: transparent;
@@ -1130,8 +1134,8 @@ span.card-index-wrapper {
 }
 
 span.card-type {
-  font-family: "Moderat", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Moderat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   letter-spacing: 0.5px;
   text-align: left;
@@ -1154,8 +1158,8 @@ span.card-type {
 }
 
 .card-title {
-  font-family: "Eina03", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Eina03', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 700;
   font-size: 5vw;
   align-self: center;
@@ -1267,7 +1271,7 @@ span.card-type {
 }
 
 p.card-caption {
-  font-family: "Moderat";
+  font-family: 'Moderat';
   font-weight: 400;
   font-size: 1.7vh;
   letter-spacing: 0.2px;
@@ -1456,7 +1460,7 @@ div.carousel-mobile > img {
 .learn-more-btn:before {
   position: absolute;
   top: 100%;
-  content: "";
+  content: '';
   will-change: transform;
   width: calc(110% - 4rem);
   height: 1px;
@@ -1497,7 +1501,7 @@ div.carousel-mobile > img {
 
 .learn-more-arrow {
   display: inline-block;
-  background-image: url("/images/arrow.svg");
+  background-image: url('/images/arrow.svg');
   background-size: 20px 13px;
   background-repeat: no-repeat;
   width: 20px;
